exports[`CategoriesContainer can render Categories tree 1`] = `
<aside
  className="categories">
  <section
    className="editor-area">
    <div
      className="editor">
      <input
        name="category"
        onChange={[Function]}
        placeholder="Enter category title"
        type="text"
        value="" />
      <div
        className="add-button"
        onClick={[Function]}>
        <span
          className="add-label">
          ADD
        </span>
      </div>
    </div>
  </section>
  <section
    className="categories-tree">
    <section>
      <a
        onClick={[Function]}
        style={Object {}}>
        <section
          className="category"
          style={
            Object {
              "backgroundColor": "#fff",
            }
          }>
          <i
            className="fa fa-minus"
            onClick={[Function]} />
          <i
            className="fa fa-check invisible" />
          <h3
            className="displayed-name"
            onMouseOut={[Function]}
            onMouseOver={[Function]}>
            Category_2
          </h3>
          <i
            className="fa fa-edit"
            onClick={[Function]} />
          <div
            className="remove-add-controls">
            <i
              className="fa fa-trash"
              onClick={[Function]} />
            <i
              className="fa fa-plus"
              onClick={[Function]} />
          </div>
        </section>
      </a>
      <section
        className="category-children">
        <section>
          <a
            onClick={[Function]}
            style={Object {}}>
            <section
              className="category"
              style={
                Object {
                  "backgroundColor": "#fff",
                }
              }>
              <i
                className="fa fa-minus invisible"
                onClick={[Function]} />
              <i
                className="fa fa-check invisible" />
              <h3
                className="displayed-name"
                onMouseOut={[Function]}
                onMouseOver={[Function]}>
                Category_2_1
              </h3>
              <i
                className="fa fa-edit"
                onClick={[Function]} />
              <div
                className="remove-add-controls">
                <i
                  className="fa fa-trash"
                  onClick={[Function]} />
                <i
                  className="fa fa-plus"
                  onClick={[Function]} />
              </div>
            </section>
          </a>
          <section
            className="category-children" />
        </section>
      </section>
    </section>
    <section>
      <a
        onClick={[Function]}
        style={Object {}}>
        <section
          className="category"
          style={
            Object {
              "backgroundColor": "#fff",
            }
          }>
          <i
            className="fa fa-minus"
            onClick={[Function]} />
          <i
            className="fa fa-check invisible" />
          <h3
            className="displayed-name"
            onMouseOut={[Function]}
            onMouseOver={[Function]}>
            Category_1
          </h3>
          <i
            className="fa fa-edit"
            onClick={[Function]} />
          <div
            className="remove-add-controls">
            <i
              className="fa fa-trash"
              onClick={[Function]} />
            <i
              className="fa fa-plus"
              onClick={[Function]} />
          </div>
        </section>
      </a>
      <section
        className="category-children">
        <section>
          <a
            onClick={[Function]}
            style={Object {}}>
            <section
              className="category"
              style={
                Object {
                  "backgroundColor": "#fff",
                }
              }>
              <i
                className="fa fa-minus"
                onClick={[Function]} />
              <i
                className="fa fa-check invisible" />
              <h3
                className="displayed-name"
                onMouseOut={[Function]}
                onMouseOver={[Function]}>
                Category_1_1
              </h3>
              <i
                className="fa fa-edit"
                onClick={[Function]} />
              <div
                className="remove-add-controls">
                <i
                  className="fa fa-trash"
                  onClick={[Function]} />
                <i
                  className="fa fa-plus"
                  onClick={[Function]} />
              </div>
            </section>
          </a>
          <section
            className="category-children">
            <section>
              <a
                onClick={[Function]}
                style={Object {}}>
                <section
                  className="category"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                    }
                  }>
                  <i
                    className="fa fa-minus invisible"
                    onClick={[Function]} />
                  <i
                    className="fa fa-check invisible" />
                  <h3
                    className="displayed-name"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}>
                    Category_1_1_1
                  </h3>
                  <i
                    className="fa fa-edit"
                    onClick={[Function]} />
                  <div
                    className="remove-add-controls">
                    <i
                      className="fa fa-trash"
                      onClick={[Function]} />
                    <i
                      className="fa fa-plus"
                      onClick={[Function]} />
                  </div>
                </section>
              </a>
              <section
                className="category-children" />
            </section>
          </section>
        </section>
      </section>
    </section>
  </section>
</aside>
`;

exports[`CategoriesContainer can render empty Categories block 1`] = `
<aside
  className="categories">
  <section
    className="editor-area">
    <div
      className="editor">
      <input
        name="category"
        onChange={[Function]}
        placeholder="Enter category title"
        type="text"
        value="" />
      <div
        className="add-button"
        onClick={[Function]}>
        <span
          className="add-label">
          ADD
        </span>
      </div>
    </div>
  </section>
  <section
    className="categories-tree" />
</aside>
`;
